test/language/errors/errors_set.hm
# can't assign value to string (expected array or table)

use "errors"

try { "foo"[2] = 0 } except e { echo runtime(e) }
